# cpp_devcontainer

./: CMakeLists.txt  README.md  renovate.json  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Containerfile  Dockerfile  devcontainer.json
.github/: dependabot.yml
benchmark/: CMakeLists.txt  main.cpp
env/: vcpkg_version.env
example/hello_world/: CMakeLists.txt  main.cpp
scripts/: install_vcpkg.sh
